<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hiren.quiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#4DB6AC"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="16dp"
            android:text="@string/title_text"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="16dp"
            android:text="@string/question_one"
            android:textColor="#000000"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/Quest_one_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_one"
            android:inputType="text"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="16dp"
            android:text="@string/question_two"
            android:textColor="#000000"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/Quest_two_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_two"
            android:inputType="text"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="16dp"
            android:text="@string/question_three"
            android:textColor="#000000"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/quest_three_checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest_three_check1"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/quest_three_checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest_three_check2"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/quest_three_checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest_three_check3"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/quest_three_checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest_three_check4"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/question_four"
            android:textColor="#000000"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/quest_four_checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest4_check1"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/quest_four_checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest4_check2"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/quest_four_checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest4_check3"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/quest_four_checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest4_check4"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/question_five"
            android:textColor="#000000"
            android:textAppearance="?android:textAppearanceMedium" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="16dp">

            <RadioButton
                android:id="@+id/quest_five_radio_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest5_radio1"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/quest_five_radio_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest5_radio2"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/quest_five_radio_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest5_radio3"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/quest_five_radio_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest5_radio4"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:text="Submit"
            android:textColor="#000000"
            android:textAppearance="?android:textAppearanceMedium"
            android:background="#E65100"
            android:onClick="evaluate"/>

    </LinearLayout>

</ScrollView>